# cuRnet

./: DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  configure.ac  getResidentThreads.cu
R/: cuRnet.R
man/: cuRnet_bfs.Rd  cuRnet_graph.Rd  cuRnet_scc.Rd  cuRnet_sssp.Rd  cuRnet_sssp_dists.Rd
src/: Makefile.in  PCSF_types.h  cuModule.cu  cuModule.cuh  cuRnet.cpp  cuRnet.h  rm_o.sh  timer.cpp  timer.h
src/base_graph/: base_graph.cpp  base_graph.hpp  cuRnetGraph.cpp  cuRnetGraph.h
src/hbf-d3-p2/: Main.cu  Main2.cu  config.cuh
src/hbf-d3-p2/XLib/: XLib.hpp
src/hbf-d3-p2/XLib/Base/: Base.hpp
src/hbf-d3-p2/XLib/Base/Device/: BaseDevice.cuh
src/hbf-d3-p2/XLib/Base/Device/DataMovement/: DataMovement.cuh
src/hbf-d3-p2/XLib/Base/Device/Primitives/: Primitives.cuh
src/hbf-d3-p2/XLib/Base/Device/Util/: Util.cuh
src/hbf-d3-p2/XLib/Base/Host/: BaseHost.hpp
src/hbf-d3-p2/XLib/Base/Host/include/: Numeric.hpp  Timer.hpp  fUtil.hpp  fastQueue.hpp  parsing.hpp  printExt.hpp
src/hbf-d3-p2/XLib/Base/Host/src/: Numeric.cpp  Timer.cpp  fUtil.cpp
src/hbf-d3-p2/XLib/Graph/: EdgeT.cuh  Graph.hpp
src/hbf-d3-p2/XLib/Graph/Device/: GraphDevice.cuh
src/hbf-d3-p2/XLib/Graph/Device/include/: cudaGraph.cuh  cudaGraphNamespace.cuh  cudaGraphWeight.cuh
src/hbf-d3-p2/XLib/Graph/Device/src/: cudaGraph.cu  cudaGraphWeight.cu
src/hbf-d3-p2/XLib/Graph/Host/: GraphHost.hpp
src/hbf-d3-p2/XLib/Graph/Host/include/: GraphBase.hpp  GraphDegree.hpp  GraphNamespace.hpp  GraphSTD.hpp  GraphWeight.hpp
src/hbf-d3-p2/XLib/Graph/Host/src/: GraphBase.cpp  GraphDegree.cpp  GraphDegree_Read.cpp  GraphSTD.cpp  GraphSTD_BFS.cpp  GraphSTD_Read.cpp  GraphSTD_SCC.cpp  GraphWeight.cpp  (+2 more)
src/hbf-d3-p2/XLib/PowerMon/: powermon.cpp  powermon.hpp
src/hbf-d3-p2/cub-1.4.1/: sync.ffs_db
src/hbf-d3-p2/cub-1.4.1/cub/thread/: thread_store.cuh
src/hbf-d3-p2/include/Device/: DegreeMarker.cuh  HBFGraph.cuh  WorkEfficient_KernelFun.cuh  WorkEfficient_KernelFun2.cuh  mwaitxintrin.h
src/hbf-d3-p2/include/Host/: GraphSSSP.hpp
src/hbf-d3-p2/src/Device/: DegreeMarker.cu  HBFGraph.cu  WorkEfficient.cu
src/hbf-d3-p2/src/Device/Kernels/: WorkEfficientKernel2.cuh  WorkEfficient_KernelDispath.cuh  WorkEfficient_KernelMain.cuh
src/hbf-d3-p2/src/Host/: BellmanFordQueue.cpp  BoostBellmanFord.cpp  BoostDijkstra.cpp  DijkstraSET.cpp  GraphSSSP.cpp
src/parallelSCC-4k/: config.h  cuModuleSCC.cu  cuModuleSCC.cuh  cuRnetSCC.cpp  cuRnetSCC.h
src/parallelSCC-4k/Util/: cudaUtil.cuh  fUtil.cpp  fUtil.h  fastQueue.h  printExt.h
src/parallelSCC-4k/cub-1.4.0/cub/: cub.cuh
src/parallelSCC-4k/cub-1.4.0/cub/grid/: grid_barrier.cuh
src/parallelSCC-4k/cub-1.4.0/cub/thread/: thread_load.cuh  thread_store.cuh
src/parallelSCC-4k/include/device/: cudaGraph.cuh  definition.cuh
src/parallelSCC-4k/src/device/: BFS_WorkEfficient.cu  cudaGraph.cu
src/parallelSCC-4k/src/device/Util/: GlobalSync.cu  GlobalWrite.cu  prefixSumAsm.cu  ptx.cu
src/parallelSCC-4k/src/device/WorkEfficientKernel/: BFS_WE_Block.cu  BFS_WE_Dynamic.cu  BFS_WE_KernelDispatch.cu  BFS_WE_KernelMain.cu  BFS_WE_Kernels1.cu
vignettes/: cuRnet-manual.Rmd  cuRnet-manual.html  ref.bib
(+42 files in other folders)
